--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "reactjs",
+  "name": "math-editor",
   "version": "0.1.0",
-  "homepage": "https://justamouse.com/mathquill4quill/reactjs",
+  "homepage": "",
   "private": true,
   "dependencies": {
+    "@edtr-io/mathquill": "0.11.0",
     "jquery": "3.6.1",
     "katex": "0.16.2",
-    "@edtr-io/mathquill": "0.11.0",
-    "mathquill4quill": "file:..",
+    "mathquill4quill": "^2.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-quill": "^1.3.5",
